--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,8 @@
             "type": "shell",
             "command": "composer",
             "args": [
-                "update"
+                "update",
+                "--no-dev"
             ],
             "problemMatcher": [],
             "options": {
@@ -65,6 +66,7 @@
                 "\"*/.*\"",
                 "\"*/.*/*\"",
                 "composer.phar",
+                "phpcs.xml",
                 "\"test/*\"",
                 "\"test/\""
             ],
