--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "command": "composer",
             "args": [
                 "update",
-                "--no-dev"
+                // "--no-dev"
             ],
             "problemMatcher": [],
             "options": {
