--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require": {
         "php": ">=7.2.5",
-        "alexminza/maib-mia-sdk": "*",
+        "alexminza/maib-mia-sdk": "^1.1",
         "monolog/monolog": "^2.7"
     },
     "config": {
