--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,7 +44,8 @@
                 "./",
                 "./languages/${workspaceFolderBasename}.pot",
                 "--slug=${workspaceFolderBasename}",
-                "--ignore-domain"
+                "--ignore-domain",
+                "--include=includes,vendor/alexminza/wc-payment-gateway-base/src"
             ],
             "problemMatcher": []
         },
