--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "require": {
         "php": ">=7.2.5",
         "alexminza/maib-mia-sdk": "^1.1",
+        "alexminza/wc-payment-gateway-base": "^1.0",
         "monolog/monolog": "^2.7"
     },
     "config": {
